@@ -1,16 +1,24 @@
 package net.okocraft.box.feature.gui.api.mode;
 
+import net.okocraft.box.feature.gui.internal.mode.StorageMode;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-public class ClickModeRegistry {
+public final class ClickModeRegistry {
 
-    private static final List<BoxItemClickMode> REGISTERED_BOX_ITEM_CLICK_MODE = new ArrayList<>();
-    private static List<BoxItemClickMode> COPIED_REGISTERED_BOX_ITEM_CLICK_MODE = Collections.emptyList();
+    private static final StorageMode STORAGE_MODE = new StorageMode();
+    private static final List<BoxItemClickMode> REGISTERED_BOX_ITEM_CLICK_MODE = new ArrayList<>(List.of(STORAGE_MODE));
+
+    // Because ClickModeRegistry#getModes is called frequently,
+    // keep a copied list to reduce calls to List#copyOf and Collections#unmodifiableList.
+    private static List<BoxItemClickMode> COPIED_REGISTERED_BOX_ITEM_CLICK_MODE = List.copyOf(REGISTERED_BOX_ITEM_CLICK_MODE);
+
+    public static @NotNull StorageMode getStorageMode() {
+        return STORAGE_MODE;
+    }
 
     public static @NotNull @Unmodifiable List<BoxItemClickMode> getModes() {
         return COPIED_REGISTERED_BOX_ITEM_CLICK_MODE;
